# FlexBLS

./: .gitignore  LICENSE  README.md  env.example  gunicorn.conf.py  pyproject.toml  supervisor.apps.ini
app/: __init__.py  config.py  globals.py  scheduler.py
app/api/: __init__.py
app/api/clients/models/: client.py
app/api/clients/query/: client.py
app/api/clients/routes/: create_client.py  delete_client.py  get_client.py  paged.py  (+2 more)
app/extensions/: __init__.py  task_scheduler.py
app/logging/: __init__.py
app/resources/: catch_all.py
app/resources/cli/: test_create_tickets.py
app/resources/templates/: catch_all.html
app/services/get_address/: service.py
app/services/smtp/: service.py
app/services/zepto/: service.py
app/tasks/: __init__.py
app/utilities/: api_responce.py  check_where.py  condense_client_address.py
app/ws_server/: __main__.py
docker/: Dockerfile  Dockerfile-morphbls  docker-compose.yaml
frontend/: __router__.jsx  globals.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/components/globals/: Icons.jsx  SavingToastBar.jsx  ToastBar.jsx
frontend/components/menus/: MainMenu.jsx
frontend/components/pages/: AllElements.jsx  Loading.jsx
frontend/contextManagers/: ContextClient.jsx  ContextClients.jsx  ContextMain.jsx  ContextRejectAuth.jsx  ContextRequireAdmin.jsx  ContextRequireAuth.jsx  ContextWebSocket.jsx
frontend/css/: buttons.css  cards.css  pills.css
frontend/utilities/: API.js
nginx/: nginx.app.conf
requirements/: development.txt  main.txt  production.txt
(+36 files in other folders)
